# libksysguard

./: .gitmodules  CMakeLists.txt  README.md  libksysguard.categories
energycore/: CMakeLists.txt  actions.actions  energy.cpp  energy.h  energyhelper.cpp  energyhelper.h
processui/: CMakeLists.txt  ProcessModel.cpp  ProcessModel.h
